<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="423dp"
        android:layout_height="0dp"
        android:background="#E6DEDE"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pokey_image"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_weight="1"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/pokey_new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:fontFamily="@font/awsome_font"
        android:text="@string/pokemon_name"
        android:textColor="@color/light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/design_default_color_on_primary"
        android:fontFamily="@font/awsome_font"
        android:text="@string/weight"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toStartOf="@+id/height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokey_image" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/design_default_color_on_primary"
        android:fontFamily="@font/awsome_font"
        android:text="@string/height"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toStartOf="@+id/sprite_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/pokey_image" />

    <ImageView
        android:id="@+id/sprite_one"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/sprite_three"
        app:layout_constraintEnd_toStartOf="@+id/sprite_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokey_image"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/sprite_two"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sprite_three"
        app:layout_constraintTop_toBottomOf="@+id/sprite_four"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/sprite_three"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toStartOf="@+id/sprite_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokey_image"
        app:layout_constraintTop_toBottomOf="@+id/sprite_one"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/sprite_four"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/sprite_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sprite_one"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_launcher_background" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokey_image"
        app:layout_constraintVertical_bias="0.79">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/abilities_list"
                style="@style/text"
                android:text="@string/abilities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/baseExperience_int"
                style="@style/text"
                android:text="@string/base_exp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/form_list"
                app:layout_constraintTop_toBottomOf="@+id/abilities_list" />

            <TextView
                android:id="@+id/form_list"
                style="@style/text"
                android:text="@string/form_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseExperience_int" />

            <!--            <TextView-->
            <!--                android:id="@+id/held_items_list"-->
            <!--                style="@style/text"-->
            <!--                android:text="@string/held_items"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/form_list" />-->

            <TextView
                android:id="@+id/order"
                style="@style/text"
                android:text="@string/order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_list" />

            <TextView
                android:id="@+id/species"
                style="@style/text"
                android:text="@string/species"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order" />

            <TextView
                android:id="@+id/stats"
                style="@style/text"
                android:text="@string/stats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/species" />

            <TextView
                android:id="@+id/types"
                style="@style/text"
                android:text="@string/types"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats" />

            <TextView
                android:id="@+id/game_indices_list"
                style="@style/text"
                android:text="@string/game_indices"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/types" />

            <TextView
                android:id="@+id/moves_list"
                style="@style/text"
                android:text="@string/movies_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_indices_list" />

            <TextView
                android:id="@+id/abilities_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/abilities"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/abilities_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/abilities_list"
                app:layout_constraintVertical_bias="0.74" />

            <TextView
                android:id="@+id/base_experince_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/base_exp"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/baseExperience_int"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/baseExperience_int" />

            <TextView
                android:id="@+id/form_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/form_list"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/form_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/form_list" />

            <TextView
                android:id="@+id/order_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/order"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/order" />

            <TextView
                android:id="@+id/species_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/species"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/species"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/species" />

            <TextView
                android:id="@+id/stats_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/stats"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/stats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/stats" />

            <TextView
                android:id="@+id/types_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/types"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/types"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/types" />

            <TextView
                android:id="@+id/game_indices_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/game_indices"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/game_indices_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_indices_list" />

            <TextView
                android:id="@+id/move_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/movies_list"
                android:textColor="@color/light"
                app:layout_constraintBottom_toTopOf="@+id/moves_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/moves_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>